# research

cardiac-care-ragcot_conf/: .gitignore  pyproject.toml
cardiac-care-ragcot_conf/src/app/: chainlit_app.py  main.py
cardiac-care-ragcot_conf/src/app/data/evaluation/eval_data/: eval_data_r50.json  eval_dataset.json  eval_dataset_generation.json  eval_dataset_retrieval.json
cardiac-care-ragcot_conf/src/app/data/evaluation/eval_result/: map_reduce_responses.json  map_reduce_responses_generation.json  model_results_r50.json  responses.json  responses_v2.json  responses_v4.json  responses_v5.json
cardiac-care-ragcot_conf/src/app/data/processed/csv/: discharge_data_50_rows.csv
cardiac-care-ragcot_conf/src/app/data/processed/json/: discharge_processed_r10.json  discharge_processed_v1.json  discharge_processed_v2.json  processed_data_50r.json  retrieved_and_compressed_documents.json  retrieved_documents.json
cardiac-care-ragcot_conf/src/app/llms/: connectivity.py
cardiac-care-ragcot_conf/src/app/pre_processing/: data_normalization.py
cardiac-care-ragcot_conf/src/app/pre_processing/eval_output/: evaluation_results.csv  evaluation_results_via_map_reduce.csv  evaluation_with_abstention_analysis.csv  evaluation_with_bertscore.csv  evaluation_with_rougeL.csv
cardiac-care-ragcot_conf/src/app/pre_processing/notebooks/: pre-post-processing_conf.ipynb
cardiac-care-ragcot_conf/src/app/rag_pipeline/data_ops/: preprocess_utils.py
cardiac-care-ragcot_conf/src/app/routers/: routes_gemini.py  routes_main.py
(+11 files in other folders)
